--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 								  <h1>Register:</h1>
 								  <!-- One "tab" for each step in the form: -->
 								  <div class="tab">Name:
-								    <p><input placeholder="First name..." oninput="this.className = ''" name="fname"></p>
-								    <p><input placeholder="Last name..." oninput="this.className = ''" name="lname"></p>
-										<p><input placeholder="Phone..." oninput="this.className = ''" name="phone"></p>
+								    <p><input placeholder="First name" oninput="this.className = ''" name="fname"></p>
+								    <p><input placeholder="Last name" oninput="this.className = ''" name="lname"></p>
+										<p><input placeholder="Phone" oninput="this.className = ''" name="phone"></p>
 								  </div>
 								  <div class="tab">Address:
 								    <p><input placeholder="Street" oninput="this.className = ''" name="street"></p>
